# pokergo_crawling

./: .gitignore  CLAUDE.md  PRD-DATA-SOURCES.md  PRD-POKERGO-DOWNLOADER.md  PRD-YOUTUBE-DATA-COLLECTION.md  README.md  pokergo_crawling_checklist.yaml  pyproject.toml  run_nams.py  run_viewer.py
.agent/: state.yaml
docs/: AUTOMATION_PIPELINE.md  DB_STATUS_REPORT.md  MATCHING_2025_ANALYSIS.md  MATCHING_2025_PLAN.md  MATCHING_RULES.md  MATCHING_STRATEGY_2025.md  NAS_DRIVE_STRUCTURE.md  POKERGO_WSOP_FULL_LIST.md  PRD-CATALOG-DB.md  PRD-METADATA-EDIT-UX.md  PRD-NAMS-MATCHING.md  README.md  SCHEDULER_SETUP.md  SYSTEM_OVERVIEW.md
gas/: .clasp.json  .clasp.json.example  Code.gs  README.md
src/migrations/iconik2sheet/: CLAUDE.md  README.md  pyproject.toml
src/migrations/iconik2sheet/config/: settings.py
src/migrations/iconik2sheet/docs/: API_VERIFICATION.md  PRD.md  TDD.md
src/migrations/iconik2sheet/iconik/: __init__.py  client.py  exceptions.py  models.py
src/migrations/iconik2sheet/scripts/: analyze_asset_types.py  analyze_checkbox.py  analyze_full_gap.py  analyze_master_catalog.py  analyze_timecode_gap.py  apply_checkbox.py  bulk_create_timecodes.py  bulk_metadata_upload.py  bulk_timecode_upload.py  check_backup_paths.py  check_generic_segment.py  check_iconik_segments.py  check_isg.py  check_jobs.py  check_parent_segment.py  check_scan_dirs.py  check_sheet_status.py  check_subclip_links.py  cleanup_backups.py  compare_sheets.py  create_single_segment.py  debug_asset_structure.py  debug_segment.py  debug_timecode.py  diagnose_api.py  find_metadata_location.py  fix_checkbox_values.py  generate_backup_xmp.py  list_bulk_segments.py  list_parent_segments.py  mark_backups.py  reverse_sync.py  run_full_metadata.py  run_full_sync.py  run_reverse_sync.py  sample_10_assets.py  search_titles.py  search_titles_iconik.py  show_all_segments.py  test_connection.py  (+6 more)
src/migrations/iconik2sheet/sheets/: __init__.py  writer.py
src/migrations/iconik2sheet/sync/: __init__.py  backup_cleanup.py  backup_loader.py  backup_marker.py  checksum.py  cleanup_report.py  full_metadata_sync.py  full_sync.py  master_catalog.py  state.py  stats.py  subclip_validator.py  xmp_generator.py
src/migrations/iconik2sheet/tests/: __init__.py  conftest.py
src/migrations/iconik2sheet/tests/fixtures/: sample_asset.json  sample_metadata.json  sample_segments.json
src/migrations/iconik2sheet/tests/integration/: test_iconik_connection.py  test_metadata_views.py
src/migrations/iconik2sheet/tests/unit/: test_client.py  test_client_errors.py  test_metadata_sync.py  test_models.py  test_settings.py  test_stats.py
src/migrations/sheet2sheet_migrate/: CLAUDE.md  __init__.py  pyproject.toml
src/migrations/sheet2sheet_migrate/config/: settings.py
src/migrations/sheet2sheet_migrate/mapping/: __init__.py  column_mapper.py
src/migrations/sheet2sheet_migrate/migration/: __init__.py  migrator.py
src/migrations/sheet2sheet_migrate/scripts/: __init__.py  dry_run.py  migrate.py
src/migrations/sheet2sheet_migrate/sheets/: __init__.py  reader.py  writer.py
(+276 files in other folders)
